--- a/contact.html
+++ b/contact.html
@@ -258,10 +258,10 @@
                 data-name="Company" placeholder="Your Business" id="Company" /><label for="field">Message
                 (Optional)</label><textarea placeholder="Let us know how we can help." maxlength="5000" id="field"
                 name="field" data-name="Field" class="form-field w-input"></textarea>
-               <!--
+               
                   <div data-sitekey="6Lfnu0YpAAAAABrVNAt7OvoIPJdLjh4ooQxfoRQS"
                 class="w-form-formrecaptcha g-recaptcha g-recaptcha-error g-recaptcha-disabled"></div>
-               --> <input
+               <input
                 type="submit" value="Submit" data-wait="" class="button form w-button" />
             </form>
             <div class="w-form-done">
